@@ -334,7 +334,10 @@ namespace bt
 	HttpConnection::HttpGet::HttpGet(const QString & host,const QString & path,bt::Uint64 start,bt::Uint64 len,bool using_proxy) 
 		: host(host),path(path),start(start),len(len),data_received(0),bytes_sent(0),response_header_received(false),request_sent(false),response_code(0)
 	{
-		QHttpRequestHeader request("GET",!using_proxy ? path : QString("http://%1/%2").arg(host).arg(path));
+		KUrl url;
+		url.setPath(path);
+		QString encoded_path = url.encodedPathAndQuery();
+		QHttpRequestHeader request("GET",!using_proxy ? encoded_path : QString("http://%1/%2").arg(host).arg(encoded_path));
 		request.setValue("Host",host);
 		request.setValue("Range",QString("bytes=%1-%2").arg(start).arg(start + len - 1));
 		request.setValue("User-Agent",bt::GetVersionString());
