@@ -2,6 +2,7 @@ Changes in 3.2.2 :
 - Fix crash when changing speed limits using system tray menu (188447)
 - Fix bug with displaying directory trees in infowidget FileView
 - Fix crash caused by calling front on empty QList
+- Make sure paths in webseed http requests are URL encoded (189477)
 
 Changes in 3.2.1 :
 - Resort torrents if display name is changed
